[package]
name = "dataserver"
version = "0.1.0"
authors = ["Yanhao Mo <yanhaocs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
fern = {version = "0.5", features = ["colored"] }
thiserror = "1.0"
anyhow = "1.0"
raft = { git = "https://github.com/tikv/raft-rs", version = "0.6.0-alpha", features = ["protobuf-codec", "default-logger"] }
tokio = {version = "1", features = ["full"] }
prost = "0.6"
tonic = "0.4"
serde = { version = "1.0.0", features = ["derive"] }
lazy_static = "1.4.0"
toml = "0.5.5"
get_if_addrs = "0.5.3"
async-channel = "1.5.1"
protobuf = "2"
regex = "1"


[build-dependencies]
prost-build = "0.6"
tonic-build = "0.4"

[[bin]]
name = "dataserver"
path = "src/dataserver.rs"

#[[bin]]
#name = "dscli"
#path = "src/dscli.rs"
