[package]
name = "dataserver"
version = "0.1.0"
authors = ["Yanhao Mo <yanhaocs@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
chrono = "0.4"
clap = "2.0"
anyhow = "1.0"
# raft = { git = "https://github.com/tikv/raft-rs", version = "0.6.0-alpha", default-features = false, features = ["prost-codec", "default-logger"] }
raft = { version = "0.6", default-features = false, features = ["prost-codec", "default-logger"] }
tokio = { version = "1", features = ["full", "tracing"] }
futures-util = "0.3.21"
prost = "0.7"
prost-types = "0.7"
tonic = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
toml = "0.5"
get_if_addrs = "0.5"
async-channel = "1.6"
protobuf = "2"
regex = "1"
libc = "0.2"
once_cell = "1.10.0"
futures = "0.3"
async-trait = "0.1.57"
sled = "0.34.7"
scopeguard = "1.1.0"
console-subscriber = "0.1.7"
num-bigint = "0.4.3"
parking_lot = "0.12.1"
tracing = "0.1"
tracing-subscriber = "0.3"
arc-swap = "1.6.0"
derivative = "2"

idl-gen = { path = "./idl-gen" }

# [[bin]]
# name = "dataserver"
# path = "src/dataserver.rs"

# [[bin]]
# name = "dscli"
# path = "src/dscli.rs"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = true    # set to false to disable debug info
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false